Implementacao final do frontend GestCondo e correcoes de layout

--- a/gestcond/app.json
+++ b/gestcond/app.json
@@ -37,6 +37,18 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "cbd46bee-be23-40a3-852e-ebb4a4b00ac8"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/cbd46bee-be23-40a3-852e-ebb4a4b00ac8"
     }
   }
 }
